--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             </div>
 
         </div>
+        <a href="https://github.com/Mercy-mathitu/Homework">Coded by Mercy</a>
 </body>
 
 </html>
