--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             </div>
 
         </div>
-        <a href="https://github.com/Mercy-mathitu/Homework">Coded by Mercy</a>
+        <div class="credit">Coded by <a href="https://github.com/Mercy-mathitu/Homework">Mercy</a></div>
+        
 </body>
 
 </html>
